<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.FoodDetailActivity">

    <LinearLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="음식 상세정보"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/img_done"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/done"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/img_food"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/img_food"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/img_food"
        app:layout_constraintTop_toBottomOf="@+id/txt_category" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/img_food">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="영양정보"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:text=" 총 내용량"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="center"
                android:text="200g"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/sodium"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_sodium"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_sodium"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/carbohydrate"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_carbohydrate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_carbohydrate"

                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/sugar"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_sugar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_sugar"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/fat"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_fat"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_fat"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/trans_fat"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_trans_fat"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_trans_fat"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/saturated_fat"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_saturated_fat"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_saturated_fat"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/cholesterol"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_cholesterol"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_cholesterol"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/table_row_bg">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:padding="8dp"
                android:text="@string/protein"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_protein"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/percent_protein"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:gravity="end"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>